[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Game_Main/Interface/Scripts/Interface.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game_Main/Interface/minimap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game_Main/Interface/statblock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game_Main/Interface/bodyhealth.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Game_Main/Interface/compass.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Game_Main/Interface/misc.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Game_Main/Super_Menu/SuperMenu_Terrain.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Game_Main/Super_Menu/SuperMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Game_Main/Super_Menu/SuperMenu_Furniture.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Game_Main/Interface/Inventory.tscn" type="PackedScene" id=10]

[node name="Interface" type="Node2D"]
script = ExtResource( 1 )

[node name="minimap" parent="." instance=ExtResource( 2 )]
offset_left = 688.493
offset_top = 3.01468
offset_right = 848.493
offset_bottom = 163.015

[node name="statblock" parent="." instance=ExtResource( 3 )]
offset_left = 330.0
offset_top = 6.02937
offset_right = 458.0
offset_bottom = 38.0294

[node name="bodyhealth" parent="." instance=ExtResource( 4 )]
offset_left = 609.228
offset_top = 104.544
offset_right = 683.228
offset_bottom = 177.544

[node name="compass" parent="." instance=ExtResource( 5 )]
offset_left = 540.334
offset_top = 3.01469
offset_right = 684.334
offset_bottom = 99.0147

[node name="misc" parent="." instance=ExtResource( 6 )]
offset_left = 699.812
offset_top = 165.745
offset_right = 843.812
offset_bottom = 229.745

[node name="SuperMenu_Terrain" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 469.987
offset_top = 204.267
offset_right = 517.987
offset_bottom = 249.267

[node name="SuperMenu" parent="." instance=ExtResource( 8 )]
visible = false
offset_left = 408.114
offset_top = 199.045
offset_right = 478.114
offset_bottom = 315.045

[node name="SuperMenu_Furniture" parent="." instance=ExtResource( 9 )]
visible = false
offset_left = 480.212
offset_top = 197.254
offset_right = 480.212
offset_bottom = 197.254

[node name="Inventory" parent="." instance=ExtResource( 10 )]
